SDKs/twilio.com/twilio_flex_v2/1.38.2/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```go
package main

import (
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    s := sdk.New()
    
    req := operations.CreateWebChannelRequest{
        Security: operations.CreateWebChannelSecurity{
            AccountSidAuthToken: shared.SchemeAccountSidAuthToken{
                Password: "YOUR_PASSWORD_HERE",
                Username: "YOUR_USERNAME_HERE",
            },
        },
        Request: &operations.CreateWebChannelCreateWebChannelRequest{
            AddressSid: "sit",
            ChatFriendlyName: "voluptas",
            CustomerFriendlyName: "culpa",
            PreEngagementData: "expedita",
        },
    }
    
    res, err := s.CreateWebChannel(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.FlexV2WebChannel != nil {
        // handle response
    }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `CreateWebChannel`

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
